# src/controllers/auth.controller.ts
@@ -20,17 +20,34 @@ type TLogin = {
 }
 
 const registerValidateSchema = Yup.object({
-     fullName: Yup.string().required(),
-     username: Yup.string().required(),
-     email: Yup.string().email().required(),
-     password: Yup.string().required(),
-     confirmPassword: Yup.string()
-                    .required()
-                    .oneOf([Yup.ref("password"), ""], "Password must be matched")
+     fullName : Yup.string().required(),
+     username : Yup.string().required(),
+     email    : Yup.string().email().required(),
+     password : Yup.string()
+               .required().min(6, 'Password must be at least 6 characters')
+               .test(
+                    "at-least-one-uppercase-letter",
+                    "Contains at least one uppercase letter",
+                    (value) => {
+                         if (!value) return false;
+                         const regex = /^(?=.*[A-Z])/;
+                         return regex.test(value);
+                    }
+               ),
+     confirmPassword : Yup.string()
+                    .required("Please input your password confirmation")
+                    .oneOf([Yup.ref("password"), ""], "Password confirmation does not match"),
 })
 
 export default {
      async register(req: Request, res: Response) {
+          /** 
+               #swagger.tags = ['Auth']
+               #swagger.requestBody = {
+                    required: true,
+                    schema: {$ref: "#/components/schemas/RegisterRequest"}
+               }
+          */
           const { fullName, username, email, password, confirmPassword } = req.body as unknown as TRegister
 
           try {
@@ -49,7 +66,7 @@ export default {
                     password
                })
 
-               res.status(200).json({
+               res.status(201).json({
                     code: 0,
                     message: "Success Registration",
                     data: result
@@ -66,20 +83,22 @@ export default {
 
      async login(req: Request, res: Response) {
           /** 
-           #swagger.requestBody = {
-               required: true,
-               schema: {$ref: "#/components/schemas/LoginRequest"}
-           }
-           */
+               #swagger.tags = ['Auth']
+               #swagger.requestBody = {
+                    required: true,
+                    schema: {$ref: "#/components/schemas/LoginRequest"}
+               }
+          */
           const {identifier, password} = req.body as unknown as TLogin
           try {
                // Ambil data user berdasarkan "identifier" -> email dan username (jadi akibatnya bisa menuliskan email atau usernamenya)
                const userByIdentifier = await UserModel.findOne({
                     $or: [ //validasi untuk dua data
-                         { email: identifier},
-                         { username: identifier}
-                    ]
-               })
+                              { email: identifier},
+                              { username: identifier},
+                         ],
+                         isActive: true //mengecek apakah sudah diaktivasi akunnya!
+                    })
 
                if(!userByIdentifier){
                     return res.status(403).json({
@@ -121,11 +140,12 @@ export default {
      },
 
      async me(req: IReqUser, res: Response){
-           /**
-            #swagger.security = [{
-               "bearerAuth": []
-            }]
-            */
+          /**
+               #swagger.tags = ['Auth']
+               #swagger.security = [{
+                    "bearerAuth": []
+               }]
+          */
           try {
                const user = req.user;
                const result = await UserModel.findById(user?.id)
@@ -135,6 +155,36 @@ export default {
                     data: result
                })
           } catch (error) {
+               const err = error as unknown as Error
+               res.status(400).json({
+                    message: err.message,
+                    data: null
+               })
+          }
+     },
+
+     async activation(req: Request, res: Response){
+          /** 
+               #swagger.tags = ['Auth']
+               #swagger.requestBody = {
+                    required: true,
+                    schema: {$ref: "#/components/schemas/ActivationRequest"}
+               }
+          */
+          try {
+               const { code } = req.body as { code: string }
+
+               const user = await UserModel.findOneAndUpdate(
+                    {activationCode: code},
+                    {isActive: true},
+                    {new: true}
+               )
+
+               res.status(200).json({
+                    message: "User Successfully Activated",
+                    data: user
+               })
+          } catch (error){
                const err = error as unknown as Error
                res.status(400).json({
                     message: err.message,
