# src/models/user.model.ts
@@ -1,7 +1,8 @@
 import mongoose from "mongoose";
 import { encrypt } from "../utils/encryption";
 
-
+import {renderMailHTML, sendMail} from '../utils/mail/mail'
+import { CLIENT_HOST, EMAIL_SMTP_USER } from "../utils/env";
 export interface User {
      fullName: string;
      username: string;
@@ -11,6 +12,7 @@ export interface User {
      profilePicture: string;
      isActive: boolean;
      activationCode: string;
+     createdAt?: string
 }
 
 const Schema = mongoose.Schema
@@ -46,14 +48,42 @@ const UserSchema = new Schema<User>({
      },
      activationCode: {
           type: Schema.Types.String,
-     }
-}, {timestamps: true})
+     },
+}, {timestamps: true, versionKey: false})
 
 // Menyimpan password dalam bentuk encrypted
 UserSchema.pre('save', function(next){
      const user = this
      user.password = encrypt(user.password)
+     user.activationCode = encrypt(user.id)
      next()
+})
+
+// Untuk proses mengirimkan activation to email
+UserSchema.post("save", async function(doc, next){
+     try {
+          const user = doc
+          const contentMail = await renderMailHTML("registration-success.ejs", {
+               username: user.username,
+               fullName: user.fullName,
+               email: user.email,
+               createdAt: user.createdAt,
+               activationLink: `${CLIENT_HOST}/auth/activation?code=${user.activationCode}`
+          });
+
+          await sendMail({
+               from: EMAIL_SMTP_USER,
+               to: user.email,
+               subject: "Aktivasi Akun",
+               html: contentMail
+          })
+
+          next()
+     } catch (error){
+          console.log(error, ':error message')
+     } finally {
+          next()
+     }
 })
 
 // Menghapus key password saat hit api LOGIN
